# loop-ad_decision

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  dummy.sql  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
app/: __init__.py  api.py  audience_allocation.py  audience_contract.py  audience_exclusions.py  cli.py  config.py  content_brief.py  db.py  dependencies.py  logging.py  main.py  server.py
docs/: content_generation_pr_breakdown.md  dashboard-segment-audience-v2-integration-handoff.md  dashboard-segment-experiment-integration-fix-spec.md  expedia_segment_backtest.md  external_segment_backtest.md  privacy_data_boundary.md  reference_logging.md  segment_assignment_benchmark.md  uplift_modeling_architecture.md
offline_evaluation/: __init__.py  assignment_benchmark.py  assignment_corpus.py  assignment_matchers.py  assignment_shadow.py  audience_selection.py  expedia_backtest.py  expedia_final_test.py  external_audience_selection.py  external_backtest.py  external_datasets.py  external_evaluation_contract.py  external_final_test.py  external_manifest_registry.py  git_state.py  pgvector_assignment_benchmark.py  rank_quality.py  sealed_execution.py
scripts/: backfill_expedia_raw_events.py  backfill_segment_audience_templates.py  backtest_expedia_segments.py  backtest_external_segments.py  benchmark_pgvector_segment_assignments.py  benchmark_segment_assignments.py  expedia_to_raw_events.sql  export_segment_assignment_corpus.py  init.sql  publish_demo_summer_lastcall_brand_context.py  render_email_variant_previews.py
tests/: __init__.py  config_env.py  conftest.py  fakes.py  test_actions_api.py  test_actions_service.py  test_analysis_api.py  test_analysis_api_wiring.py  test_analysis_contract.py  test_analysis_repositories.py  test_analysis_result_contract.py  test_analysis_service.py  test_analysis_worker.py  test_anomalies_api.py  test_anomalies_service.py  test_anomaly.py  test_api.py  test_assignment_benchmark.py  test_assignment_corpus.py  test_assignment_matchers.py  test_audience_allocation.py  test_audience_exclusions.py  test_audience_selection.py  test_audience_selection_backtest.py  test_automation_policies_api.py  test_bandit_service.py  test_behavior_audience_v2.py  test_booking_model.py  test_config.py  test_content_assets.py  test_content_brief.py  test_content_generation_service.py  (+107 more)
(+183 files in other folders)
