[project]
name = "loop-ad-decision-api"
version = "0.1.0"
description = "Loop-Ad AI Decision API service"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "clickhouse-connect>=0.8.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pyarrow>=18.0.0,<22.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["agent*", "tests*"]

[tool.setuptools.package-data]
"app.analysis" = ["models/*.json", "manifests/*.json", "calibrations/*.json"]
"app.uplift" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
